começando o CSS do projeto

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Garanta uma vida longa e cheia de alegria para o seu melhor amigo">
+    <link rel="stylesheet" href="style/style.css">
     <title>Clinica Veterinária</title>
 </head>
 <body>
@@ -97,7 +98,7 @@
     </main>
     <footer>
         <div>
-            <img src="imagens/logo.svg" alt="PetLife">
+            <a href="index.html"><img src="imagens/logo.svg" alt="PetLife"></a>
             <p>Cuidando com amor, vivendo com alegria: Petlife, onde a vida dos pets é mais felíz.</p>
         </div>
         <div>
