--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Garanta uma vida longa e cheia de alegria para o seu melhor amigo">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Clinica Veterinária</title>
 </head>
 <body>
     <header>
         <a href="index.html" id="home">
-            <img src="imagens/logo.svg" alt="Logo da Marca">
+            <img src="imagens/logo-white.svg" alt="Logo da Marca">
         </a>
         <nav>
             <a href="#inicio">Início</a>
