--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <section id="clinica">
             <div>
                 <h2>Cuidado Veterinario de qualidade</h2>
-                <p class="paragrafo"></p>>
+                <p class="paragrafo">
                     Nossa clinica veterinária é o local onde a paixão pelos animais se une á excelência em cuidados vereinários. Sob a liderança da Dra.Vivien Reid, uma profissional altamente qualificada e comprometida, oferecemos serviços de saúde personalizada e do carinho que seu pet merece.
                 </p>
                 <ul>
@@ -56,7 +56,7 @@
         <section id="farmacia">
             <h2>Venha conferir o nosso petshop e farmácia</h2>
             <img src="imagens/shop-img.svg" alt="" width="645" height="438" loading="lazy">
-            <p class="paragrafo"></p>>
+            <p class="paragrafo">
                 Além de ser uma clinica veterinária de confiança, também contamos com um completo petshop e farmácia. Nosso petshop oferece uma ampla seleção de produtos e axessórios elegantes para o seu pet. Na nossa farmácia, você encontrará uma variedade de medicamentos, produtos de cuidados e sumplementos recomendados pelos nossos veterinários, garantindo que o bem-estar e a saúde do seu amado pet estejam sempre em boas mãos. Tudo o que você precisa para cuidar e mimar o seu pet está aqui, no nosso petshop e farmácia, com a mesma dedicação e qualidade que nos torno referência na área veterinária
                 .
             </p>
@@ -70,13 +70,13 @@
                 <div>
                     <h3>Quais são os serviços pela clinica Petlife</h3>
                     <img src="imagens/arrow-down.svg" alt="">
-                    <p class="paragrafo"></p>>A clinica da Petlife oferece uma ampla gama de serviços, incluindo consultas de rotina, vacinaão, Cirurgias, tratamentos de doenças, cuidados odontológicos, atendimento de emergência 24 horas, programas de prevenção de pulgas, carrapatos e vermes, entre outros. Nosso objetio é para garantir a saúde e o bem-estar do seu pet</p> 
+                    <p class="paragrafo">A clinica da Petlife oferece uma ampla gama de serviços, incluindo consultas de rotina, vacinaão, Cirurgias, tratamentos de doenças, cuidados odontológicos, atendimento de emergência 24 horas, programas de prevenção de pulgas, carrapatos e vermes, entre outros. Nosso objetio é para garantir a saúde e o bem-estar do seu pet</p> 
                 </div>
 
                 <div>
                     <h3>Quais espécies de animais a clinica veterinária atende?</h3>
                     <img src="imagens/arrow-down.svg" alt="">
-                    <p class="paragrafo"></p>>
+                    <p class="paragrafo">
                         A clinica veterinária da Petlife antende animais de estimação de toas as espécies, incluindo cães, gatos, pássaros, roedores e répties. Nossos profissionais possuem conhecimento e experiência para cuidar der diferentes tipos de animais, oferecendo um atendimentoespecializado e deedicado a cada um deles.
                     </p>
                 </div>
@@ -84,7 +84,7 @@
                 <div>
                     <h3>A clinica Petlife possui serviços de emergência</h3>
                     <img src="imagens/arrow-down.svg" alt="">
-                    <p class="paragrafo"></p>>
+                    <p class="paragrafo">
                         Sim, aclinica veterianária da Petlife oferece serviços de emergência 24 horas. Se o seu animal de estimação precisar de atendimento veterinário fora do horário de expediente, nossa equipe está pronta para ajudar, fornecendo cuidados urgentes e tratamento adequado para garantir o bem-estar do seu pet.
                     </p>
                 </div>
@@ -92,7 +92,7 @@
                 <div>
                     <h3>A clinica oferece serviços de banho e tosa?</h3>
                     <img src="imagens/arrow-down.svg" alt="">
-                    <p class="paragrafo"></p>>Sim, a clinica veterianária da Petlife oferece serviços profissionais de banho e tosa. Nossa equipe de profissionais experientes garante que seu pet receba cuidados adequados, usando produtos de alta qualidade e tecnicas seguras. O nosso banho e tosa ajudam a mantera higiene, a saúde da pele e pelagem do seu pet, além de proporcionar uma experiência relaxante e agradável para eles.
+                    <p class="paragrafo">Sim, a clinica veterianária da Petlife oferece serviços profissionais de banho e tosa. Nossa equipe de profissionais experientes garante que seu pet receba cuidados adequados, usando produtos de alta qualidade e tecnicas seguras. O nosso banho e tosa ajudam a mantera higiene, a saúde da pele e pelagem do seu pet, além de proporcionar uma experiência relaxante e agradável para eles.
                         
                     </p>
                 </div>
