--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
     <title>Clinica Veterinária</title>
 </head>
 <body>
@@ -15,7 +16,11 @@
         <a href="index.html" id="home">
             <img src="imagens/logo-white.svg" alt="Logo da Marca">
         </a>
-        <nav>
+        <span id="burguer" class="material-symbols-outlined" onclick="clickMenu() ">
+            menu
+        </span>
+        
+        <nav id="itens">
             <a href="#inicio">Início</a>
             <a href="#clinica">Clinica</a>
             <a href="#farmacia">Farmácia</a>
@@ -125,5 +130,16 @@
         </a>
         na trilha Start na programação da OneBitCode
     </div>
+
+    <script>
+        function clickMenu() {
+            if (itens.style.display == 'block'){
+                itens.style.display = 'none'
+            } else{
+                itens.style.display = 'block'
+            }
+        }
+    </script>
 </body>
+
 </html>
