--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Garanta uma vida longa e cheia de alegria para o seu melhor amigo">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/media.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
     <title>Clinica Veterinária</title>
@@ -29,7 +29,7 @@
     </header>
     <main>
         <Section id="inicio">
-            <img src="imagens/start-img.svg" alt="Imagen de uma mulher com o seu cachorro" width="580px" height="580px">
+            <img id="cachorro" src="imagens/start-img.svg" alt="Imagen de uma mulher com o seu cachorro" width="580px" height="580px">
             <div>
                 <h1>Garanta uma vida longa e cheia de alegria para o seu melhor amigo</h1>
                 <p class="paragrafo">A Petlife é o seu refúgio de confiança para o cuidado completo do seu pet. Com profissionais dedicados e serviços abrangentes, oferecemos uma experiência acolhedora e personalizada, garantindo o bem-estar, a saúde e a felicidade dos seus animais de estimação</p>
@@ -56,18 +56,18 @@
 
             </div>
             
-            <img src="imagens/clinic-img.svg" alt="" width="480px" height="480px" loading="lazy">
+            <img id="clinica" src="imagens/clinic-img.svg" alt="" width="480px" height="480px" loading="lazy">
         </section>
         <section id="farmacia">
             <h2>Venha conferir o nosso petshop e farmácia</h2>
-            <img src="imagens/shop-img.svg" alt="" width="645" height="438" loading="lazy">
+            <img id="shop" src="imagens/shop-img.svg" alt="" width="645" height="438" loading="lazy">
             <p class="paragrafo">
                 Além de ser uma clinica veterinária de confiança, também contamos com um completo petshop e farmácia. Nosso petshop oferece uma ampla seleção de produtos e axessórios elegantes para o seu pet. Na nossa farmácia, você encontrará uma variedade de medicamentos, produtos de cuidados e sumplementos recomendados pelos nossos veterinários, garantindo que o bem-estar e a saúde do seu amado pet estejam sempre em boas mãos. Tudo o que você precisa para cuidar e mimar o seu pet está aqui, no nosso petshop e farmácia, com a mesma dedicação e qualidade que nos torno referência na área veterinária
                 .
             </p>
         </section>
         <section id="duvidas">
-            <img src="imagens/faq-img.svg" alt="" width="540" height="540" loading="lazy">
+            <img id="faq" src="imagens/faq-img.svg" alt="" width="540" height="540" loading="lazy">
 
             <div>
                 <h2>Ficou alguma dúvia</h2>
