--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
                 <a class="transparente" href="#clinica">Conheça nossa Clinica</a>
 
             </div>
+
+            <span><img class="absolute" src="imagens/shape.svg" alt=""></span>
         </Section>
         <section id="clinica">
             <div>
