--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
             <div>
                 <h2>Ficou alguma dúvia</h2>
 
-                <div>
+                <div class="duvida">
                     <h3>Quais são os serviços pela clinica Petlife</h3>
                     <img src="imagens/arrow-down.svg" alt="">
                     <p class="paragrafo">A clinica da Petlife oferece uma ampla gama de serviços, incluindo consultas de rotina, vacinaão, Cirurgias, tratamentos de doenças, cuidados odontológicos, atendimento de emergência 24 horas, programas de prevenção de pulgas, carrapatos e vermes, entre outros. Nosso objetio é para garantir a saúde e o bem-estar do seu pet</p> 
                 </div>
 
-                <div>
+                <div class="duvida">
                     <h3>Quais espécies de animais a clinica veterinária atende?</h3>
                     <img src="imagens/arrow-down.svg" alt="">
                     <p class="paragrafo">
@@ -88,7 +88,7 @@
                     </p>
                 </div>
 
-                <div>
+                <div class="duvida">
                     <h3>A clinica Petlife possui serviços de emergência</h3>
                     <img src="imagens/arrow-down.svg" alt="">
                     <p class="paragrafo">
@@ -96,7 +96,7 @@
                     </p>
                 </div>
 
-                <div>
+                <div class="duvida">
                     <h3>A clinica oferece serviços de banho e tosa?</h3>
                     <img src="imagens/arrow-down.svg" alt="">
                     <p class="paragrafo">Sim, a clinica veterianária da Petlife oferece serviços profissionais de banho e tosa. Nossa equipe de profissionais experientes garante que seu pet receba cuidados adequados, usando produtos de alta qualidade e tecnicas seguras. O nosso banho e tosa ajudam a mantera higiene, a saúde da pele e pelagem do seu pet, além de proporcionar uma experiência relaxante e agradável para eles.
@@ -112,7 +112,7 @@
             <p>Cuidando com amor, vivendo com alegria: Petlife, onde a vida dos pets é mais felíz.</p>
         </div>
         <div>
-            <strong>Links rápidos</strong>
+            <strong class="titulo">Links rápidos</strong>
             <nav>
                 <a href="#inicio">Início</a>
                 <a href="#clinica">Clinica</a>
@@ -121,13 +121,13 @@
             </nav>
         </div>
         <div>
-            <strong>Encontre-nos</strong>
+            <strong class="titulo">Encontre-nos</strong>
             <p>WhatsApp: <a href="https://wa.me/5562982247950" target="_blank">(22) 98765-4321</a></p>
             <p>Email: <a href="mailto:contato@petlife.com">contato@petlife.com</a></p>
             <p>endereço:Rua 8 de Outubro, N° 45, Centro </p>
         </div>
     </footer>
-    <div>
+    <div id="copy">
         Desenvolvido por <a href="https://github.com/" target="_blank">Daví Oliveira Sousa
         </a>
         na trilha Start na programação da OneBitCode
