--- a/index.html
+++ b/index.html
@@ -133,14 +133,8 @@
         na trilha Start na programação da OneBitCode
     </div>
 
-    <script>
-        function clickMenu() {
-            if (itens.style.display == 'block'){
-                itens.style.display = 'none'
-            } else{
-                itens.style.display = 'block'
-            }
-        }
+    <script src="index.js">
+
     </script>
 </body>
 
